--- a/ch07-case-study/case_study.Rmd
+++ b/ch07-case-study/case_study.Rmd
@@ -32,7 +32,7 @@ py_config()
 
 ```{r eval = TRUE}
 # Create an ephemeral in-memory RSQLite database
-con <- dbConnect(SQLite(), "./data/FPA_FOD_20170508.sqlite")
+con <- dbConnect(SQLite(), "C:/db/FPA_FOD_20170508.sqlite")
 
 fires <- dbGetQuery(con, "
                         SELECT
@@ -42,6 +42,21 @@ fires <- dbGetQuery(con, "
 dbDisconnect(con)
 # The data set has `r nrow(fires)` observations.
 ```
+
+
+```{r}
+glimpse(fires)
+```
+
+```{r}
+library(leaflet)
+leaflet() %>%
+addTiles() %>%
+addMarkers(lng = fires$LONGITUDE, lat = fires$LATITUDE, clusterOptions = markerClusterOptions())
+```
+
+
+
 
 ```{python eval = TRUE}
 from sklearn.ensemble import RandomForestClassifier
@@ -60,16 +75,13 @@ DT::datatable(fires[sample(1:nrow(fires), 600),])
 
 ### Model
 
-```{r echo = TRUE}
-source_python("ml.py")
-```
-
 ```{python eval = FALSE}
 # Alternatively, 
 # To run in an RMarkdown code chunk.
 features = ["OWNER_CODE", "DISCOVERY_DOY", "FIRE_SIZE", "LATITUDE", "LONGITUDE"]
 X = r.fires[features]
 y = r.fires["STAT_CAUSE_DESCR"]
+
 
 le = LabelEncoder()
 y = le.fit_transform(y)
@@ -83,12 +95,24 @@ conmat = metrics.confusion_matrix(y_test, preds)
 acc = metrics.accuracy_score(y_test, preds)
 ```
 
+
+
+```{r echo = TRUE}
+source_python("ml.py")
+```
+
+
 ### Results
+
+```{r}
+py$acc
+```
+
 
 The accuracy is `r acc`.
 
 ```{r}
-conmat %>% 
+py$conmat %>% 
   as.data.frame.table(responseName = "value") %>% 
   ggplot(aes(Var1, Var2, size = value)) +
   geom_point(shape = 1) +
@@ -104,6 +128,8 @@ conmat %>%
 Sliders for prediction:
 
 ```{r}
+
+library(shiny)
 sliderInput("OWNER_CODE", "Owner code:", 
             min = 1, max = 15, value = 1)
 sliderInput("DISCOVERY_DOY", "Day of the year:", 
